MET-6550 Fix PatternAnalysisServiceImplIT